--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,13 @@ android {
 }
 
 dependencies {
+
+//    implementation 'androidx.core:core-ktx:1.8.0'
+//    implementation 'androidx.appcompat:appcompat:1.5.0'
+//    implementation 'com.google.android.material:material:1.6.1'
+//    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+//    testImplementation 'junit:junit:4.+'
+
     implementation 'com.github.SimpleMobileTools:Simple-Commons:78b27e9f16'
     implementation 'androidx.documentfile:documentfile:1.0.1'
     implementation "androidx.exifinterface:exifinterface:1.3.4"
@@ -76,4 +83,9 @@ dependencies {
     implementation "androidx.camera:camera-extensions:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation "androidx.camera:camera-view:$camerax_version"
+    implementation 'com.google.android.gms:play-services-location:19.0.0'
+
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:18.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 }
